modules/015-admission-policy-engine/templates/policies/restricted/seccomp/constraint.yaml
{{- $parameters := dict "allowedProfiles" (list "RuntimeDefault" "Localhost") "allowedLocalhostFiles" (list "*") }}
{{- include "pod_security_standard_restricted" (list . "D8PSSSeccomp" $parameters ) }}
