modules/015-admission-policy-engine/templates/policies/restricted/seccomp/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-pss-seccomp-restricted
tests:
  - name: d8-pss-seccomp-restricted
    template: ../../baseline/seccomp/ctemplate.yaml
    constraint: constraint.yaml
    cases:
      - name: example-allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/allowed.yaml
        assertions:
          - violations: no
      - name: example-allowed-pod
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/allowed_pod.yaml
        assertions:
          - violations: no
      - name: example-disallowed-empty
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed_empty.yaml
        assertions:
          - violations: yes
      - name: example-allowed-localhost
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/allowed_localhost.yaml
        assertions:
          - violations: no
      - name: example-disallowed-undefined
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed_undefined.yaml
        assertions:
          - violations: yes
      - name: example-disallowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-ephemeral
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed_ephemeral.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-multi
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/disallowed_multi.yaml
        assertions:
          - violations: yes
